# ss_comp_panel

./: .gitignore  ASSUMPTIONS.md  README.md  demo_supersonic_panel.py  pyproject.toml
.github/workflows/: test.yml
docs/: benchmark_sources.md  optimizer.md
machline/: run_examples.py  setup.sh
notebooks/: 01_composite_panel_tutorial.ipynb  02_tutorial_multicase_sizing.ipynb  03_tutorial_hypersonic_wing.ipynb  04_tutorial_aeroelastic_tailoring.ipynb  05_tutorial_sensitivity.ipynb  06_tutorial_wing_skin_mdo.ipynb  07_tutorial_lamination_params.ipynb  composite_panel_tutorial.ipynb  tutorial_aeroelastic_tailoring.ipynb  tutorial_hypersonic_wing.ipynb  tutorial_multicase_sizing.ipynb  tutorial_sensitivity.ipynb  tutorial_supersonic_panel.ipynb
scripts/: arrow_wing_cr132575.csv  demo_aeroelastic_tailoring.py  demo_hypersonic_wing.py  demo_lamination_params.py  demo_multicase_sizing.py  demo_sensitivity.py  demo_supersonic_panel.py  external_loads_template.csv  flight_envelope.csv  onera_m6_pressure_points.csv  onera_m6_pressure_sections.csv  published_panel_loads.csv  validate_model.py
src/composite_panel/: __init__.py  aero_loads.py  aeroelastic.py  arrow_wing.py  buckling.py  cp_integration.py  failure.py  laminate.py  lamination_parameters.py  loads_db.py  loads_store.py  optimizer.py  ply.py  thermal.py  trim.py
tests/: test_aero_loads.py  test_arrow_wing.py  test_basics.py  test_buckling.py  test_clt.py  test_cp_integration.py  test_failure.py  test_input_parsing.py  test_loads_store.py
